[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/BabyCreator.gd" type="Script" id=1]
[ext_resource path="res://Assets/Parts/Eyes/999_eyes.PNG" type="Texture" id=3]
[ext_resource path="res://Assets/Parts/Mouth/z-default_mouth.PNG" type="Texture" id=4]
[ext_resource path="res://Assets/Parts/Defaults/Head.PNG" type="Texture" id=5]
[ext_resource path="res://Assets/Parts/Nose/z-default_nose.PNG" type="Texture" id=6]
[ext_resource path="res://Assets/Parts/Outfit/z-default_outfit.PNG" type="Texture" id=8]
[ext_resource path="res://Assets/Parts/Hair/z-default_hair.PNG" type="Texture" id=9]
[ext_resource path="res://Assets/gui_themes/ui_buttons.tres" type="Theme" id=10]
[ext_resource path="res://Assets/Buttons/Spritesheet_Animation_UI_Pumpkin_Arrow_Forward.png" type="Texture" id=11]
[ext_resource path="res://Assets/gui_themes/next_buttons.tres" type="Theme" id=12]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 11 )
region_rect = Rect2( 70, 6, 20, 20 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 11 )
region_rect = Rect2( 38, 8, 20, 18 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 11 )
region_rect = Rect2( 6, 7, 20, 19 )

[node name="BabyCreator" type="Node2D"]
script = ExtResource( 1 )

[node name="Baby" type="Node2D" parent="."]
position = Vector2( 342, 431 )
scale = Vector2( 0.3, 0.3 )

[node name="Hair" type="Sprite" parent="Baby"]
z_index = 6
texture = ExtResource( 9 )

[node name="Eyes" type="Sprite" parent="Baby"]
z_index = 4
texture = ExtResource( 3 )

[node name="Nose" type="Sprite" parent="Baby"]
z_index = 3
texture = ExtResource( 6 )

[node name="Mouth" type="Sprite" parent="Baby"]
z_index = 2
texture = ExtResource( 4 )

[node name="HeadCircle" type="Sprite" parent="Baby"]
z_index = 1
texture = ExtResource( 5 )

[node name="Outfit" type="Sprite" parent="Baby"]
texture = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 720.0
margin_top = 111.0
margin_right = 1189.0
margin_bottom = 761.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 469.0
margin_bottom = 650.0
custom_constants/separation = 40

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 469.0
margin_bottom = 80.0
custom_constants/separation = 20
alignment = 1

[node name="Randomizer" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer7"]
margin_left = 109.0
margin_right = 359.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 80 )
theme = ExtResource( 12 )
text = "Randomize"

[node name="HairH" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 469.0
margin_bottom = 170.0
custom_constants/separation = 20
alignment = 1

[node name="HairMinus" type="Button" parent="MarginContainer/VBoxContainer/HairH"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 4
theme = ExtResource( 10 )

[node name="HairLabel" type="Label" parent="MarginContainer/VBoxContainer/HairH"]
margin_left = 70.0
margin_top = 7.0
margin_right = 399.0
margin_bottom = 43.0
size_flags_horizontal = 3
theme = ExtResource( 10 )
text = "Hair"
align = 1

[node name="HairPlus" type="Button" parent="MarginContainer/VBoxContainer/HairH"]
margin_left = 419.0
margin_right = 469.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 4
theme = ExtResource( 10 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="EyesH" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 469.0
margin_bottom = 260.0
custom_constants/separation = 20
alignment = 1

[node name="EyesMinus" type="Button" parent="MarginContainer/VBoxContainer/EyesH"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 4
theme = ExtResource( 10 )

[node name="EyesLabel" type="Label" parent="MarginContainer/VBoxContainer/EyesH"]
margin_left = 70.0
margin_top = 7.0
margin_right = 399.0
margin_bottom = 43.0
size_flags_horizontal = 3
theme = ExtResource( 10 )
text = "Eyes"
align = 1

[node name="EyesPlus" type="Button" parent="MarginContainer/VBoxContainer/EyesH"]
margin_left = 419.0
margin_right = 469.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 4
theme = ExtResource( 10 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="NoseH" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 469.0
margin_bottom = 350.0
custom_constants/separation = 20
alignment = 1

[node name="NoseMinus" type="Button" parent="MarginContainer/VBoxContainer/NoseH"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 4
theme = ExtResource( 10 )

[node name="NoseLabel" type="Label" parent="MarginContainer/VBoxContainer/NoseH"]
margin_left = 70.0
margin_top = 7.0
margin_right = 399.0
margin_bottom = 43.0
size_flags_horizontal = 3
theme = ExtResource( 10 )
text = "Nose"
align = 1

[node name="NosePlus" type="Button" parent="MarginContainer/VBoxContainer/NoseH"]
margin_left = 419.0
margin_right = 469.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 4
theme = ExtResource( 10 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="MouthH" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 390.0
margin_right = 469.0
margin_bottom = 440.0
custom_constants/separation = 20
alignment = 1

[node name="MouthMinus" type="Button" parent="MarginContainer/VBoxContainer/MouthH"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 4
theme = ExtResource( 10 )

[node name="MouthLabel" type="Label" parent="MarginContainer/VBoxContainer/MouthH"]
margin_left = 70.0
margin_top = 7.0
margin_right = 399.0
margin_bottom = 43.0
size_flags_horizontal = 3
theme = ExtResource( 10 )
text = "Mouth"
align = 1

[node name="MouthPlus" type="Button" parent="MarginContainer/VBoxContainer/MouthH"]
margin_left = 419.0
margin_right = 469.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 4
theme = ExtResource( 10 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="OutfitH" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 480.0
margin_right = 469.0
margin_bottom = 530.0
custom_constants/separation = 20
alignment = 1

[node name="OutfitMinus" type="Button" parent="MarginContainer/VBoxContainer/OutfitH"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 4
theme = ExtResource( 10 )

[node name="OutfitLabel" type="Label" parent="MarginContainer/VBoxContainer/OutfitH"]
margin_left = 70.0
margin_top = 7.0
margin_right = 399.0
margin_bottom = 43.0
size_flags_horizontal = 3
theme = ExtResource( 10 )
text = "Outfit"
align = 1

[node name="OutfitPlus" type="Button" parent="MarginContainer/VBoxContainer/OutfitH"]
margin_left = 419.0
margin_right = 469.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 4
theme = ExtResource( 10 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="HBoxContainer8" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 570.0
margin_right = 469.0
margin_bottom = 650.0
custom_constants/separation = 20
alignment = 1

[node name="NextButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer8"]
margin_left = 109.0
margin_right = 359.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 80 )
theme = ExtResource( 12 )
text = "Next"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer7/Randomizer" to="." method="_on_Randomizer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HairH/HairMinus" to="." method="_on_HairMinus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HairH/HairPlus" to="." method="_on_HairPlus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/EyesH/EyesMinus" to="." method="_on_EyesMinus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/EyesH/EyesPlus" to="." method="_on_EyesPlus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NoseH/NoseMinus" to="." method="_on_NoseMinus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NoseH/NosePlus" to="." method="_on_NosePlus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MouthH/MouthMinus" to="." method="_on_MouthMinus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MouthH/MouthPlus" to="." method="_on_MouthPlus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OutfitH/OutfitMinus" to="." method="_on_OutfitMinus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OutfitH/OutfitPlus" to="." method="_on_OutfitPlus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer8/NextButton" to="." method="_on_NextButton_pressed"]
